--- a/papers/templates/layouts/home.html
+++ b/papers/templates/layouts/home.html
@@ -41,7 +41,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
-
+  <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"></script>
   <!-- NProgress -->
   <link rel="stylesheet" href="https://unpkg.com/nprogress@0.2.0/nprogress.css">
   <style>
@@ -121,14 +121,14 @@
   </style>
 
   <!-- Alpine.js -->
-  <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"></script>
+
 
   {% load static %}
   {% block extra_head %}{% endblock %}
 </head>
 
-<body class="min-h-screen bg-gradient-to-br 
-  from-blue-100 via-blue-150 to-blue-50
+<body class="min-h-screen sm:px-4 bg-gradient-to-br 
+  from-blue-100 via-blue-50 to-blue-50
   dark:from-gray-900 dark:via-gray-900 dark:to-zinc-950
   text-zinc-900 dark:text-zinc-100 font-inter transition-colors duration-300 
   flex flex-col">
