--- a/papers/templates/papers/partials/uploads/uploaded_papers.html
+++ b/papers/templates/papers/partials/uploads/uploaded_papers.html
@@ -5,7 +5,7 @@
   <div class="flex justify-between items-center">
     <button 
       @click="subTab = 'upload'" 
-      class="btn btn-soft dark:bg-zinc-800 dark:border-zinc-700 dark:text-zinc-200 p-4">
+      class="btn btn-soft dark:bg-blue-800 dark:border-zinc-700 dark:text-zinc-200 p-4">
       Add Paper
     </button>
   </div>
