--- a/papers/templates/components/footer.html
+++ b/papers/templates/components/footer.html
@@ -1,4 +1,4 @@
-<footer class="footer sm:footer-horizontal border-t  text-black px-5 py-1 dark:border-zinc-800 dark:text-zinc-300">
+<footer class="footer sm:footer-horizontal text-zinc-500 border-t text-black px-5 py-1 dark:border-zinc-800 dark:text-zinc-500">
   <aside>
     <p>
       Pamantasan ng Lungsod ng Pasig
