--- a/papers/templates/home.html
+++ b/papers/templates/home.html
@@ -2,10 +2,10 @@
 
 {% block content %}
 <div class="flex flex-col items-center justify-center min-h-[60vh]">
-  <h1 class="text-3xl font-bold text-blue-900 mb-2 text-center dark:text-zinc-300 ">
+  <h1 class="text-3xl font-bold text-blue-900 mb-2 text-center dark:text-gray-300 ">
     Welcome to the Semantic Academic Paper Repository
   </h1>
-  <h2 class="text-lg text-gray-600 mb-6 text-center dark:text-zinc-400">
+  <h2 class="text-lg text-gray-600 mb-6 text-center dark:text-gray-400">
     Discover, Upload, and Explore Academic Papers
   </h2>
 
@@ -30,17 +30,17 @@
       name="q"
       placeholder="Search papers, authors, or topics..."
       value="{{ request.GET.q }}"
-      class="w-full p-3 pl-12 border-2 border-blue-800 rounded-full focus:ring-1 focus:ring-black focus:outline-none transition dark:bg-zinc-900 dark:border-zinc-700 dark:text-zinc-100"
+      class="w-full p-3 pl-12 border-2 border-blue-800 rounded-full focus:ring-1 focus:ring-black focus:outline-none transition dark:bg-gray-950 dark:border-gray-800 dark:text-gray-100"
       autocomplete="off">
   </div>
 </form>
 
 
     <div class="mt-6 flex flex-col gap-2 text-center">
-      <a href="{% url 'paper_upload' %}" class="text-black hover:underline font-medium dark:text-zinc-300">
+      <a href="{% url 'paper_upload' %}" class="text-black hover:underline font-medium dark:text-gray-300">
         Upload a Paper
       </a>
-      <a href="{% url 'paper_list' %}" class="text-black hover:underline font-medium dark:text-zinc-300">
+      <a href="{% url 'paper_list' %}" class="text-black hover:underline font-medium dark:text-gray-300">
         Browse All Papers
       </a>
     </div>
