--- a/staff/templates/components/navbar_staff.html
+++ b/staff/templates/components/navbar_staff.html
@@ -1,4 +1,4 @@
-<nav class="bg-white p-4 shadow flex items-center dark:bg-zinc-900">
+<nav class=" pt-2 px-2 flex items-center pl-4">
   <div class="container mx-auto flex items-center justify-between">
 
     <!-- Logo -->
