--- a/staff/templates/staff/partials/dashboard.html
+++ b/staff/templates/staff/partials/dashboard.html
@@ -1,3 +1,4 @@
+<div>
 <h1 class="text-3xl font-bold text-gray-900 dark:text-gray-200">Dashboard</h1>
 <div class="max-w-7xl mx-auto mt-8 px-4 sm:px-6 lg:px-8">
 
@@ -58,4 +59,4 @@
   </div>
 
 </div>
-
+</div>
